git-svn-id: http://svn.vdombox.ru/flextools/trunk@8485 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/skins/TableElementSkin.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/skins/TableElementSkin.mxml
@@ -134,11 +134,9 @@
 			</s:Rect>
 			
 		</s:Group>
-		
-		
 	</s:VGroup>
 	
 	<mx:Image id="angle" bottom="7" right="7" width="8" height="8"
-			  source="@Embed('assets/cornertable.png')" mouseDown="angle_mouseDownHandler(event)" />
-	
+			  source="{ VDOMImage.Cornertable }" mouseDown="angle_mouseDownHandler(event)" />
+	 
 </s:SparkSkin>
