--- a/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/windows/ScriptStructureWindowSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/windows/ScriptStructureWindowSkin.mxml
@@ -15,7 +15,7 @@
 			import mx.events.FlexEvent;
 			
 			import net.vdombox.editors.parsers.AutoCompleteItemVO;
-			import net.vdombox.editors.parsers.Field;
+			import net.vdombox.editors.parsers.base.Field;
 			import net.vdombox.ide.common.view.components.VDOMImage;
 			import net.vdombox.utils.XMLUtils;
 			
