git-svn-id: http://svn.vdombox.ru/flextools/trunk@8509 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/EditorSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/EditorSkin.mxml
@@ -131,8 +131,9 @@
 				
 				<s:HGroup includeIn="xml, xmlDisabled">
 					<button:WorkAreaButton id="saveXMLButton"
-										   height="25" icon="{VDOMImage.Save}"
-										   label="{ resourceManager.getString( 'Wysiwyg_General', 'work_area_xml_save_button_label' ) }"/>
+										   height="25" icon="{VDOMImage.Save_White}"
+										   label="{ resourceManager.getString( 'Wysiwyg_General', 'work_area_xml_save_button_label' ) }"
+										   downColor="#daa440"/>
 					
 					<mx:Spacer width="5"/>
 					
