--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ScriptEditor.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ScriptEditor.mxml
@@ -17,9 +17,9 @@
 		<![CDATA[
 			import mx.events.FlexEvent;
 			
-			import net.vdombox.editors.BaseScriptEditor;
+			import net.vdombox.editors.parsers.base.BaseScriptEditor;
 			import net.vdombox.editors.HashLibraryArray;
-			import net.vdombox.editors.PythonScriptEditor;
+			import net.vdombox.editors.parsers.python.PythonScriptEditor;
 			import net.vdombox.editors.ScriptAreaComponent;
 			import net.vdombox.ide.common.events.EditorEvent;
 			import net.vdombox.ide.common.events.FindBoxEvent;
