--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/WorkAreaSkin.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/WorkAreaSkin.mxml
@@ -238,10 +238,11 @@
 			  left="1" right="1" top="1"
 			  gap="0" paddingRight="20" verticalAlign="middle">
 		<button:WorkAreaButton id="saveButton"
-								   enabled="true" enabled.disabled="false" height="20" icon="{VDOMImage.Save_White}"
+								   enabled="true" enabled.disabled="false" height="20" 
+								   icon="{VDOMImage.Save}" iconDown="{ VDOMImage.Save_White }"
 								   label="{ resourceManager.getString( 'Events_General', 'work_area_save' ) }"
 								   highlighted="false" highlighted.unsaved="true"
-								   downColor="#daa440"/>
+								   backgroundDownColor="#daa440" textDownColor="#F0F0F0"/>
 		
 		<button:WorkAreaButton id="undoButton"
 							   height="20" icon="{VDOMImage.Undo}"
