git-svn-id: http://svn.vdombox.ru/flextools/trunk@8515 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/FindTreeItemRenderer.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/FindTreeItemRenderer.mxml
@@ -7,7 +7,7 @@
 	
 	<fx:Script>
 		<![CDATA[
-			import net.vdombox.ide.common.events.FindBoxEvent;
+			import net.vdombox.ide.modules.scripts.events.FindBoxEvent;
 			import net.vdombox.ide.common.view.components.VDOMImage;
 			
 			[Bindable]
