--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/FindBox.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/FindBox.mxml
@@ -11,7 +11,7 @@
 			import mx.events.FlexEvent;
 			
 			import net.vdombox.editors.ScriptAreaComponent;
-			import net.vdombox.ide.common.events.FindBoxEvent;
+			import net.vdombox.ide.modules.scripts.events.FindBoxEvent;
 			import net.vdombox.ide.common.model._vo.LibraryVO;
 			import net.vdombox.ide.common.model._vo.PageVO;
 			import net.vdombox.ide.common.model._vo.ServerActionVO;
