git-svn-id: http://svn.vdombox.ru/flextools/trunk@8517 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ApplicationListItemRenderer.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ApplicationListItemRenderer.mxml
@@ -192,7 +192,8 @@
 			  paddingTop="12" paddingBottom="12"
 			  gap="10">
 		<mx:Image id="imageHolder"
-				  width="40" height="40"/>
+				  width="40" height="40"
+				  smoothBitmapContent="true"/>
 		
 		<s:VGroup width="45%" height="100%" gap="0">
 			
