--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/EditorSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/EditorSkin.mxml
@@ -130,10 +130,10 @@
 				</s:VGroup>
 				
 				<s:HGroup includeIn="xml, xmlDisabled">
-					<button:WorkAreaButton id="saveXMLButton"
-										   height="25" icon="{VDOMImage.Save_White}"
+					<button:WorkAreaButton id="saveXMLButton" height="25" 
+										   icon="{VDOMImage.Save}" iconDown="{VDOMImage.Save_White}"
 										   label="{ resourceManager.getString( 'Wysiwyg_General', 'work_area_xml_save_button_label' ) }"
-										   downColor="#daa440"/>
+										   backgroundDownColor="#daa440" textDownColor="#F0F0F0"/>
 					
 					<mx:Spacer width="5"/>
 					
