git-svn-id: http://svn.vdombox.ru/flextools/trunk@8521 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/RenameBox.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/RenameBox.mxml
@@ -45,8 +45,8 @@
 				while ( index != -1 )
 				{
 					token = tokenizer.tokenByPos( index );
-					if ( token.type == Token.STRING_LITERAL || token.type == Token.NAMECLASS ||
-						token.type == Token.NAMEFUNCTION )
+					if ( token.string == findName && ( token.type == Token.STRING_LITERAL || token.type == Token.NAMECLASS ||
+						token.type == Token.NAMEFUNCTION ) )
 					{
 						words.push( index );
 					}
@@ -112,7 +112,7 @@
 			
 			protected function renameButton_clickHandler(event:MouseEvent):void
 			{
-				var renameWindow : NameObjectWindow = new NameObjectWindow( oldName, resourceManager.getString( "Scripts_General", "create_action_window_action_title" ) );	
+				var renameWindow : NameObjectWindow = new NameObjectWindow( oldName, resourceManager.getString( "Scripts_General", "rename_variable_window_action_title" ) );	
 				renameWindow.addEventListener( PopUpWindowEvent.APPLY, applyHandler );
 				renameWindow.addEventListener( PopUpWindowEvent.CANCEL, cancelHandler );
 				WindowManager.getInstance().addWindow(renameWindow, this, true);
